--- a/app/components/top.html
+++ b/app/components/top.html
@@ -72,15 +72,18 @@
   <div class="top__banner">
     <div class="top__banner-inner container">
       <div class="top__banner-item">
-        <div class="top__banner-title" id="counterYears"></div>
+        <div class="top__banner-title" id="counterYears">10</div>
         <div class="top__banner-info">лет на рынке</div>
       </div>
       <div class="top__banner-item top__banner-item--center">
-        <div class="top__banner-title" id="counterArea"></div>
+        <div class="top__banner-title" id="counterArea">
+          2 000 000
+          <div class="suffix">м<sup>2</sup></div>
+        </div>
         <div class="top__banner-info">сопровождаем ежемесячно</div>
       </div>
       <div class="top__banner-item">
-        <div class="top__banner-title" id="couterProjects"></div>
+        <div class="top__banner-title" id="couterProjects">505</div>
         <div class="top__banner-info">завершенных проектов</div>
       </div>
     </div>
