--- a/app/scss/assets/_global.scss
+++ b/app/scss/assets/_global.scss
@@ -8,9 +8,9 @@ html {
 }
 
 .container {
-  max-width: 1340px;
+  max-width: 1330px;
   width: 100%;
-  padding: 0 30px;
+  padding: 0 20px;
   margin: 0 auto;
 }
 
@@ -51,6 +51,13 @@ body {
   @media (max-width: 960px) {
     font-size: 16px;
     line-height: 140%;
+  }
+  @media (max-width: 768px) {
+    font-size: 14px;
+    line-height: 140%;
+  }
+  &.open-popup {
+    position: fixed;
   }
 }
 
