--- a/app/scss/components/benefits.scss
+++ b/app/scss/components/benefits.scss
@@ -53,4 +53,77 @@
       margin-bottom: 20px;
     }
   }
+
+  @media (max-width: 1720px) {
+    &__banner .container {
+      max-width: 100%;
+      width: 100%;
+    }
+  }
+  @media (max-width: 1560px) {
+    &__banner-download {
+      max-width: 420px;
+    }
+    &__banner-text {
+      max-width: 620px;
+    }
+  }
+  @media (max-width: 1100px) {
+    &__banner {
+      display: block;
+
+      .container {
+        padding: 0;
+      }
+    }
+    &__banner-text {
+      padding: 25px 30px;
+      max-width: 100%;
+      width: 100%;
+    }
+    &__banner-download {
+      position: static;
+      max-width: 100%;
+      width: 100%;
+      padding: 34px 30px;
+    }
+  }
+  @media (max-width: 960px) {
+    &__title {
+      margin-bottom: 30px;
+    }
+    &__item {
+      height: 130px;
+      padding-top: 30px;
+    }
+  }
+  @media (max-width: 768px) {
+    margin-bottom: 80px;
+    &__title {
+      font-size: 22px;
+      line-height: 120%;
+      margin-bottom: 20px;
+    }
+    &__item {
+      height: 100px;
+      padding-top: 20px;
+    }
+    &__banner-text {
+      padding: 20px;
+    }
+    &__banner-text,
+    &__banner-download {
+      font-size: 14px;
+      line-height: 140%;
+    }
+    &__banner-download {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        margin-right: 20px;
+        margin-bottom: 0;
+      }
+    }
+  }
 }
