--- a/app/scss/components/info.scss
+++ b/app/scss/components/info.scss
@@ -21,6 +21,9 @@
     width: 50%;
     background-color: #f5f5f5;
     padding: 46px 60px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
   &__item-box {
     max-width: 610px;
