--- a/app/components/documentation.html
+++ b/app/components/documentation.html
@@ -1,5 +1,8 @@
 <section class="documentation">
   <div class="documentation__inner container">
+    <div class="documentation__image">
+      <img src="@img/global/documentation-image.jpg" alt="background image" />
+    </div>
     <div class="documentation__content">
       <h2 class="documentation__title title-2">
         Приводим в порядок документацию по всем видам работ:
