--- a/app/components/fileBanner.html
+++ b/app/components/fileBanner.html
@@ -58,6 +58,20 @@
                 <img class="added-file" src="@img/icons/active-file.svg" alt="added file" />
               </label>
             </div>
+            <div class="fileBanner__form-fileWrapper mobile-file">
+              <input
+                type="file"
+                name="file-4"
+                id="file-4"
+                data-multiple-caption="{count} files selected"
+                multiple
+                class="fileBanner__form-fileInput"
+              />
+              <label for="file-4">
+                <img src="@img/icons/add-file.svg" alt="add file" />
+                <img class="added-file" src="@img/icons/active-file.svg" alt="added file" />
+              </label>
+            </div>
           </div>
         </div>
         <div class="projects__form-inputWrapper">
