--- a/app/components/personal.html
+++ b/app/components/personal.html
@@ -30,6 +30,14 @@
     </div>
     <div class="personal__image">
       <img src="@img/global/iphone-12.png" alt="iphone image" />
+      <div class="personal__content-apps mobile-apps">
+        <a href="#" class="personal__content-app">
+          <img src="@img/icons/appstore.svg" alt="appstore" />
+        </a>
+        <a href="#" class="personal__content-app ml-16">
+          <img src="@img/icons/googleplay.svg" alt="googleplay" />
+        </a>
+      </div>
     </div>
   </div>
 </section>
