--- a/app/scss/components/clients.scss
+++ b/app/scss/components/clients.scss
@@ -35,4 +35,25 @@
       width: 190px;
     }
   }
+
+  @media (max-width: 960px) {
+    &__inner {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(6, 1fr);
+    }
+  }
+  @media (max-width: 768px) {
+    margin-bottom: 80px;
+    &__title {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    &__inner {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(8, 1fr);
+    }
+    &__item {
+      padding: 15px;
+    }
+  }
 }
