--- a/app/scss/components/documentation.scss
+++ b/app/scss/components/documentation.scss
@@ -3,6 +3,10 @@
   background-image: url('../images/global/documentation-bg.jpg');
   padding-top: 80px;
   margin-bottom: 130px;
+
+  &__image {
+    display: none;
+  }
   &__inner {
     display: flex;
     justify-content: flex-end;
@@ -33,6 +37,9 @@
     display: flex;
     justify-content: space-between;
   }
+  &__list + .documentation__list {
+    margin-left: 32px;
+  }
   &__list-item + .documentation__list-item {
     margin-top: 15px;
   }
@@ -53,6 +60,56 @@
       width: 25px;
       height: 2px;
       background-color: $dark-accent;
+    }
+  }
+
+  @media (max-width: 960px) {
+    background: $white;
+    &__image {
+      display: block;
+      margin: 0 -20px;
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &__inner {
+      display: block;
+    }
+    &__content {
+      max-width: 100%;
+      width: 100%;
+      padding: 0 20px;
+      padding-top: 60px;
+      padding-bottom: 50px;
+    }
+  }
+  @media (max-width: 768px) {
+    &__title {
+      font-size: 24px;
+      line-height: 110%;
+    }
+    &__box {
+      display: block;
+    }
+    &__list + .documentation__list {
+      margin-top: 12px;
+      margin-left: 0;
+    }
+    &__list-item {
+      font-size: 18px;
+      line-height: 150%;
+      padding-left: 22px;
+      &::before {
+        width: 10px;
+      }
+    }
+    &__list-item + .documentation__list-item {
+      margin-top: 12px;
+    }
+    &__content {
+      padding: 40px 0;
     }
   }
 }
