--- a/app/scss/components/flieBanner.scss
+++ b/app/scss/components/flieBanner.scss
@@ -50,8 +50,11 @@
   }
   .top__list {
     margin-bottom: 0;
+    opacity: 0.7;
   }
-
+  .mobile-file {
+    display: none;
+  }
   &__form-fileInput {
     width: 0.1px;
     height: 0.1px;
@@ -94,5 +97,46 @@
   }
   &__form-fileWrapper + .fileBanner__form-fileWrapper {
     margin-left: 32px;
+  }
+
+  @media (max-width: 960px) {
+    background-image: url('../images/global/fileBanner-bg-tablet.svg');
+    &__inner {
+      display: block;
+      max-width: 580px;
+      margin: 0 auto;
+    }
+    &__content {
+      margin-bottom: 40px;
+    }
+  }
+  @media (max-width: 768px) {
+    background-image: url('../images/global/fileBanner-bg-mobile.svg');
+    &__title {
+      font-size: 22px;
+    }
+    &__content {
+      margin-bottom: 30px;
+    }
+    &__form-file {
+      display: block;
+    }
+    &__form-fileText {
+      margin-bottom: 15px;
+      font-size: 16px;
+      line-height: 140%;
+    }
+    .mobile-file {
+      display: flex;
+    }
+    &__form-fileWrapper + .fileBanner__form-fileWrapper {
+      margin: 0;
+    }
+    &__form-fileBox {
+      justify-content: space-between;
+    }
+    &__form-box {
+      padding: 20px;
+    }
   }
 }
