--- a/app/scss/components/info.scss
+++ b/app/scss/components/info.scss
@@ -28,7 +28,6 @@
   &__item-box {
     max-width: 610px;
     width: 100%;
-    margin-bottom: 40px;
   }
   &__item-box + .info__item-box {
     margin-top: 40px;
@@ -87,6 +86,51 @@
     }
     .swiper-pagination-progressbar-fill {
       background-color: $accent;
+    }
+  }
+  @media (max-width: 960px) {
+    &__item {
+      display: flex;
+      flex-direction: column;
+      min-height: 808px;
+      height: auto;
+    }
+    &__item-image {
+      max-width: 100%;
+      width: 100%;
+      height: 445px;
+    }
+    &__item-content {
+      max-width: 100%;
+      width: 100%;
+      height: auto;
+      align-items: flex-start;
+      justify-content: center;
+      padding: 30px 50px;
+      box-sizing: border-box;
+      flex: 1;
+    }
+    &__slider-paginationWrapper {
+      width: 100%;
+    }
+  }
+  @media (max-width: 768px) {
+    &__item-image {
+      height: 260px;
+    }
+    &__item-description {
+      font-size: 13px;
+      line-height: 140%;
+    }
+    &__item-text {
+      font-size: 15px;
+      line-height: 140%;
+    }
+    &__item-box + .info__item-box {
+      margin-top: 30px;
+    }
+    &__item-content {
+      justify-content: flex-start;
     }
   }
 }
