--- a/app/scss/components/services.scss
+++ b/app/scss/components/services.scss
@@ -5,9 +5,10 @@
   margin-bottom: 130px;
   &__title {
     padding-top: 48px;
-    font-size: 48px;
     letter-spacing: 0.01em;
     font-feature-settings: 'kern' off;
+    white-space: nowrap;
+    margin-right: 32px;
 
     background: linear-gradient(
       93.98deg,
@@ -48,5 +49,45 @@
     color: #ffffff;
     width: 100%;
     white-space: nowrap;
+  }
+  @media (max-width: 1260px) {
+    padding-top: 40px;
+    padding-bottom: 45px;
+    &__inner {
+      display: block;
+    }
+    &__content {
+      max-width: 100%;
+      width: 100%;
+    }
+    &__title {
+      margin-bottom: 30px;
+      padding-top: 0;
+    }
+    &__content-item {
+      font-size: 16px;
+      line-height: 150%;
+      padding: 30px;
+    }
+  }
+  @media (max-width: 768px) {
+    margin-bottom: 80px;
+    &__content {
+      display: block;
+    }
+    &__content-col {
+      max-width: 100%;
+      width: 100%;
+    }
+    &__content-item {
+      white-space: pre-wrap;
+    }
+  }
+  @media (max-width: 560px) {
+    &__content-item {
+      padding: 20px;
+      font-size: 15px;
+      line-height: 150%;
+    }
   }
 }
