--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -83,29 +83,36 @@
     <div class="footer__license">
       <div class="footer__license-title">Лицензии</div>
       <div class="footer__license-inner">
-        <p class="footer__license-col">
-          Свидетельство об аккредитации на право осуществления инжиниринговых услуг по техническому
-          надзору на технически и технологически сложных объектах. По объектам первого уровня
-          ответственности № KZ72VWC00092516 Свидетельство об аккредитации на право осуществления
-          экспертных работ по техническому обследованию надежности и устойчивости зданий и
-          сооружений на технически и технологически сложных объектах первого и второго уровней
-          ответственности № KZ13VWC00092608
-        </p>
-        <p class="footer__license-col">
-          Свидетельство об аккредитации на право управления проектами в области архитектуры,
-          градостроительства и строительства № KZ59VWC00076745 Лицензия на инженерно-геодезические
-          работы № 21023075 ТОО "Engineering Services" Сертификат соответствия государственной
-          системы технического регулирования № KZ.Q.01.0720.C22.015742 ТОО "Engineering Services"
-        </p>
+        <div class="footer__license-col">
+          <p>
+            Свидетельство об аккредитации на право осуществления инжиниринговых услуг по
+            техническому надзору на технически и технологически сложных объектах. По объектам
+            первого уровня ответственности № KZ72VWC00092516
+          </p>
+          <p>
+            Свидетельство об аккредитации на право осуществления экспертных работ по техническому
+            обследованию надежности и устойчивости зданий и сооружений на технически и
+            технологически сложных объектах первого и второго уровней ответственности №
+            KZ13VWC00092608
+          </p>
+        </div>
+        <div class="footer__license-col">
+          <p>
+            Свидетельство об аккредитации на право управления проектами в области архитектуры,
+            градостроительства и строительства № KZ59VWC00076745
+          </p>
+          <p>Лицензия на инженерно-геодезические работы № 21023075 ТОО "Engineering Services"</p>
+          <p>Сертификат соответствия государственной системы технического регулирования</p>
+          <p>№ KZ.Q.01.0720.C22.015742 ТОО "Engineering Services"</p>
+        </div>
       </div>
     </div>
     <div class="footer__copy">
       <div class="footer__copy-text">© ТОО "Engineering Services" 2013 - 2023</div>
-      <div class="footer__copy-linkBox">
-        <a href="#" class="footer__copy-link">Политика конфиденциальности</a>
-        <a href="#" class="footer__copy-link">Пользовательское соглашение</a>
-        <a href="#" class="footer__copy-link">Политика обработки файлов cookie</a>
-      </div>
+
+      <a href="#" class="footer__copy-link">Политика конфиденциальности</a>
+      <a href="#" class="footer__copy-link">Пользовательское соглашение</a>
+      <a href="#" class="footer__copy-link">Политика обработки файлов cookie</a>
     </div>
   </div>
 </footer>
