--- a/app/components/order.html
+++ b/app/components/order.html
@@ -1,5 +1,8 @@
 <div class="order">
   <div class="order__inner container">
+    <div class="order__image">
+      <img src="@img/global/order-image.jpg" alt="order image" />
+    </div>
     <div class="order__content">
       <h2 class="order__title title-2">Оставьте заявку и мы бесплатно оптимизируем ваш проект:</h2>
       <ul class="top__list">
