--- a/app/components/projects.html
+++ b/app/components/projects.html
@@ -41,7 +41,7 @@
         </div>
         <div class="projects__item-name">Завод "Modex"</div>
       </div>
-      <div class="projects__form grid-item">
+      <div class="projects__form grid-item" data-load="formIncr">
         <h2 class="projects__form-title">
           Оставьте заявку и получите бесплатный тех. аудит текущего или нового объекта с подробным
           отчетом
@@ -85,7 +85,7 @@
           </div>
         </form>
       </div>
-      <div class="projects__loadMore grid-item">
+      <div class="projects__loadMore grid-item" data-load="incr">
         <a href="#" class="projects__loadMore-button white-button" data-grid-open="loadMore">
           Посмотреть ещё
         </a>
@@ -130,7 +130,7 @@
     </div>
     <div class="projects__item-name">Завод "Modex"</div>
   </div>
-  <div class="grid-item">
+  <div class="grid-item" data-load="decr">
     <div class="projects__form">
       <h2 class="projects__form-title">
         Оставьте заявку и получите бесплатный тех. аудит текущего или нового объекта с подробным
