--- a/app/scss/assets/_global.scss
+++ b/app/scss/assets/_global.scss
@@ -13,7 +13,9 @@ html {
   padding: 0 20px;
   margin: 0 auto;
 }
-
+input {
+  border-radius: 0 !important;
+}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -57,7 +59,7 @@ body {
     line-height: 140%;
   }
   &.open-popup {
-    position: fixed;
+    overflow: hidden;
   }
 }
 
