--- a/app/scss/components/documentation.scss
+++ b/app/scss/components/documentation.scss
@@ -86,6 +86,8 @@
     }
   }
   @media (max-width: 768px) {
+    margin-bottom: 40px;
+    padding-top: 0;
     &__title {
       font-size: 24px;
       line-height: 110%;
