--- a/app/scss/components/modals.scss
+++ b/app/scss/components/modals.scss
@@ -9,7 +9,9 @@
 .mfp-close {
   display: none !important;
 }
-
+.mfp-content {
+  padding: 20px;
+}
 .order-popup {
   &-close {
     position: absolute;
@@ -62,6 +64,42 @@
         color: $accent;
         text-decoration: underline;
       }
+    }
+  }
+
+  @media (max-width: 960px) {
+    &__title {
+      font-size: 24px;
+      line-height: 140%;
+      margin-bottom: 15px;
+    }
+    &__text {
+      font-size: 16px;
+      line-height: 140%;
+    }
+  }
+  @media (max-width: 768px) {
+    &__image {
+      height: 200px;
+
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &__title {
+      font-size: 18px;
+      line-height: 140%;
+      margin-bottom: 8px;
+    }
+    &__text {
+      font-size: 16px;
+      line-height: 140%;
+      margin-bottom: 30px;
+    }
+    &__content {
+      padding: 30px 20px;
     }
   }
 }
