--- a/app/scss/components/order.scss
+++ b/app/scss/components/order.scss
@@ -52,4 +52,71 @@
       opacity: 0.7;
     }
   }
+  &__image {
+    display: none;
+  }
+
+  @media (max-width: 1360px) {
+    background: $accent;
+    padding-top: 0;
+    &__image {
+      display: block;
+      height: 500px;
+      margin-right: -20px;
+      margin-left: -20px;
+      margin-bottom: 50px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    &__content {
+      background: $accent;
+      max-width: 100%;
+      width: 100%;
+
+      .projects__form-inputWrapper {
+        display: flex;
+      }
+      .projects__form-input {
+        margin-bottom: 0;
+      }
+    }
+  }
+  @media (max-width: 960px) {
+    .top__list-item {
+      font-size: 16px;
+    }
+  }
+  @media (max-width: 768px) {
+    &__image {
+      height: 234px;
+    }
+    &__title {
+      font-size: 22px;
+      margin-bottom: 30px;
+    }
+    .top__list {
+      margin-bottom: 30px;
+    }
+    &__form-box {
+      display: block;
+    }
+    .projects__form-inputWrapper {
+      display: block;
+    }
+    .projects__form-input {
+      margin-bottom: 25px;
+      max-width: 100%;
+      width: 100%;
+    }
+    .order__form-button {
+      padding: 15px;
+      margin-left: 0;
+      margin-top: 25px;
+      margin-bottom: 30px;
+    }
+  }
 }
